--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -268,7 +268,7 @@
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "datacollectionoption":{
-    "message":"Позволи анонимен сбор от AdBlock на данни за ползваните филтри и сведения за блокираното от тях съдържание",
+    "message":"Събирай анонимно за AdBlock данни с ползваните филтри и сведения с блокираното съдържание",
     "description":"Checkbox on the 'General' tab of the Options page"
   },
   "updatedrightnow":{
