--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -1272,7 +1272,7 @@
     "description":"Text of a payment request link"
   },
   "privacy_policy":{
-    "message":"Política de privacitat",
+    "message":"Política de privadesa",
     "description":"Link to AdBlock's privacy policy"
   },
   "translator_credit":{
@@ -1388,7 +1388,7 @@
     "description":"Label for checkbox letting user choose whether to block ads on youtube.com"
   },
   "block_privacy_on_youtube":{
-    "message":"Protegeix la meva privacitat al YouTube™",
+    "message":"Protegeix la meva privadesa al YouTube™",
     "description":"Checkbox letting user choose whether to block privacy-related requests on youtube.com"
   },
   "block_annonyances_on_youtube":{
