--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -387,6 +387,10 @@
     "message":"EasyList",
     "description":"A filter list"
   },
+  "filtereasylist_lite":{
+    "message":"EasyList Lite",
+    "description":"A filter list"
+  },
   "filterrussian":{
     "message":"Ruské a Ukrajinské",
     "description":"Language names for a filter list"
@@ -737,6 +741,30 @@
   },
   "lang_turkish":{
     "message":"Turečtina",
+    "description":"Language name"
+  },
+  "lang_catalan":{
+    "message":"Katalánština",
+    "description":"Language name"
+  },
+  "lang_chinese_simplified":{
+    "message":"Zjednodušená čínština",
+    "description":"Language name"
+  },
+  "lang_chinese_traditional":{
+    "message":"Tradiční čínština",
+    "description":"Language name"
+  },
+  "lang_croatian":{
+    "message":"Chorvatština",
+    "description":"Language name"
+  },
+  "lang_norwegian":{
+    "message":"Norština",
+    "description":"Language name"
+  },
+  "lang_serbian":{
+    "message":"Srbština",
     "description":"Language name"
   },
   "filtereasylist_plus_bulgarian":{
@@ -1543,6 +1571,10 @@
   },
   "adreport_server_response_error__manual_msg_step1":{
     "message":"Prosím, přejděte na [[naše webové stránky podpory]].",
+    "description":"Error message shown when the server has an unrecoverable error during the submission of an ad or bug report."
+  },
+  "adreport_server_response_error__manual_msg_step2":{
+    "message":"Ručně vytvořte lístek a zkopírujte a vložte následující informace do sekce \"Vyplňte všechny detaily, o kterých si myslíte, že nám pomůžou pochopit váš problém\".",
     "description":"Error message shown when the server has an unrecoverable error during the submission of an ad or bug report."
   },
   "custom_filters_migration_error_message_part1":{
