--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -1784,5 +1784,9 @@
   "display_language_selector":{
     "message":"Display AdBlock in",
     "description":"Text shown before language selector drop-down."
+  },
+  "local_cdn_option":{
+    "message":"Enable Local CDN for popular website libraries",
+    "description":"Option to let the user enable Local CDN feature."
   }
 }
