--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -163,6 +163,10 @@
     "message":"Voltar",
     "description":"Back to previous page button"
   },
+  "findingads":{
+    "message":"A procurar anúncios...\n\nIsto vai demorar um pouco.",
+    "description":"'Block an ad' wizard loading message"
+  },
   "blockanadtitle":{
     "message":"Bloquear um anúncio",
     "description":"Title of the first two dialogs of the 'Block an ad' wizard"
@@ -1087,6 +1091,10 @@
     "message":"Activar o AdBlock nesta página",
     "description":"Link text to un-whitelist a page, displayed immediately after 'AdBlock is disabled on this page'"
   },
+  "enable_adblock_on_this_channel":{
+    "message":"Bloquear anúncios neste canal",
+    "description":"Menu entry to un-whitelist a YouTube channel, displayed under 'You allowed ads on this channel.'"
+  },
   "status_paused":{
     "message":"AdBlock está em pausa.",
     "description":"Message shown in toolbar button when AdBlock is not running"
@@ -1138,6 +1146,10 @@
   "donate_to_adblock":{
     "message":"Ama o AdBlock? Considere doar!",
     "description":"Text of a donate link in the toolbar button menu"
+  },
+  "help_and_feedback":{
+    "message":"Ajuda e opiniões",
+    "description":"Text of a help link in the toolbar button menu"
   },
   "pwyw":{
     "message":"Pague o que quiser!",
