--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,11 @@
 
 UNRELEASED:
 
+3.25.3:
+- Updated translations
+- Added the local CDN feature.  (#290)
+- Improved the performance of a common URL parsing function. (#291)
+
 3.24.0:
 - Updated translations
 - Updated the tab survey logic to check the 'state' of the computer prior to opening a tab. (#289)
