Updated with version: 3.26.1 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,16 @@
 
 UNRELEASED:
 
+3.26.1:
+- Updated translations
+- Fixed an issue with missing seperators on the AdBlock popup menu. (#298)
+
+3.26.0:
+- Updated translations
+- Added a new 'Pause on this site' menu item on the AdBlock popup menu.  (#293)
+- Updated the Cryptocurrency (Bitcoin) Mining Protection List URL. (#295)
+- Removed obsolete AdBlock popup menu items. (#294)
+
 3.25.3:
 - Updated translations
 - Added the local CDN feature.  (#290)
