--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -1183,6 +1183,10 @@
     "message":"Don't run on pages on this domain",
     "description":"Menu entry to open the whitelist wizard"
   },
+  "dont_run_on_pages_on_site":{
+    "message":"Don't run on pages on this site",
+    "description":"Menu entry to open the whitelist wizard"
+  },
   "disabled_on_this_page":{
     "message":"AdBlock is disabled on this page.",
     "description":"Message shown in toolbar button on web pages that have been whitelisted"
@@ -1203,13 +1207,38 @@
     "message":"AdBlock is paused.",
     "description":"Message shown in toolbar button when AdBlock is not running"
   },
+  "status_universal_paused":{
+    "message":"AdBlock is paused on all sites.",
+    "description":"Message shown in toolbar button when AdBlock is not running on all domains"
+  },
+  "status_domain_paused":{
+    "message":"AdBlock is paused on this site.",
+    "description":"Message shown in toolbar button when AdBlock is not running on a specific domain"
+  },
+
+  "resume_blocking_ads":{
+    "message":"Resume blocking ads",
+    "description":"Link text to start blocking ads again, displayed immediately after 'AdBlock is paused on this site' or 'AdBlock is paused on all sites'"
+  },
   "unpause_adblock":{
     "message":"Unpause AdBlock",
     "description":"Link text to start blocking ads again, displayed immediately after 'AdBlock is paused'"
   },
+  "domain_unpause_adblock":{
+    "message":"Unpause AdBlock on this site",
+    "description":"Link text to start blocking ads again, displayed immediately after 'AdBlock is paused on this site'"
+  },
   "pause_adblock":{
     "message":"Pause AdBlock",
     "description":"Menu entry to pause AdBlock (stop blocking ads)"
+  },
+  "pause_adblock_everywhere":{
+    "message":"Pause on all sites",
+    "description":"Menu entry to pause AdBlock everywhere (stop blocking ads)"
+  },
+  "domain_pause_adblock":{
+    "message":"Pause on this site",
+    "description":"Menu entry to pause AdBlock on this domain (stop blocking ads)"
   },
   "unpause_adblocking":{
     "message":"Unpause ad blocking",
@@ -1241,6 +1270,10 @@
   },
   "undo_last_block":{
     "message":"Undo my blocks on this domain",
+    "description":"Menu entry to let the user cancel the result of running the blacklist wizard."
+  },
+  "undo_last_block_site":{
+    "message":"Undo my blocks on this site",
     "description":"Menu entry to let the user cancel the result of running the blacklist wizard."
   },
   "dont_run_on_this_page":{
@@ -1786,7 +1819,7 @@
     "description":"Text shown before language selector drop-down."
   },
   "local_cdn_option":{
-    "message":"Enable Local CDN for popular website libraries",
+    "message":"Enable local content caching for popular website libraries",
     "description":"Option to let the user enable Local CDN feature."
   }
 }
